--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url('');
+    background-image: url('"C:\Users\ovi\Downloads\COMPRE~1\PROJEC~1\PROJEC~1\DALLE2~1.WEB"');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
