--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url('C:\Users\ovi\Downloads\Compressed\Project_Payment_Partner\Project Payment Partner\bg.webp');
+    background-image: url('./bg.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
