--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     position: relative;
-    background-image: url('./bg.webp');
+    background-image: url('./bg2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
